# RecomendationSystemTooling

./: README.md  main.py  pyproject.toml
.history/: README_20250923151819.md  README_20250923152038.md  README_20250924144103.md  README_20250924173613.md  tooling_per_worker_jaccard_20250924125915.sql  toolings_details_20250922151612.sql  toolings_per_jobid_jaccard_20250924121602.sql  toolings_per_jobid_jaccard_20250924125913.sql
.history/docs/: DocumentacaoProjeto_20250922181950.md  DocumentacaoProjeto_20250923152312.md  DocumentacaoProjeto_20250923152437.md  tipos_movimentacao_20250922115952.md  tipos_movimentacao_20250922120103.md  tipos_movimentacao_20250922150150.md  tipos_movimentacao_20250922150437.md  tipos_movimentacao_20250922151350.md
.history/queries/: global_frequency_20250922102401.sql  global_frequency_20250922115950.sql  global_frequency_20250922120102.sql  global_frequency_20250922144334.sql  global_frequency_20250922151528.sql  global_frequency_20250922182456.sql  global_frequency_20250924131628.sql  global_frequency_20250924173237.sql  global_frequency_20251002112351.sql  movements_items_list_20250924115848.sql  movements_items_list_20250924115935.sql  movements_items_list_20250925105834.sql  (+4 more)
data/: listagem_ferramentas.csv  listagem_ferramentas_movimentacao_sem_container_2021.csv  tooling_code_per_movements.csv  tooling_code_popularity.csv  tooling_subfamilia.csv  toolingcode_per_jobid.csv  toolingcode_subfamily.csv
notebooks/: analisys_colab.ipynb
queries/: movements_items_list.sql  tooling_per_worker_jaccard.sql
src/models/: fp_growth.py
(+3 files in other folders)
