[project]
name = "07-recomendationsystemtooling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gensim==4.3.2",
    "ipykernel>=6.30.1",
    "mlxtend>=0.23.4",
    "network>=0.1",
    "networkx>=3.5",
    "numpy<2.4",
    "pandas>=2.3.2",
    "scipy<1.12",
]
